--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,11 @@
   ],
   "require": {
     "php": "^7.0",
-    "guzzlehttp/psr7": "^1.6",
+    "php-http/curl-client": "^2.1",
     "php-http/message": "^1.8",
     "php-http/httplug": "^2.1"
   },
   "require-dev": {
-    "php-http/guzzle6-adapter": "^2.0",
     "phpunit/phpunit": "5.3.*",
     "mockery/mockery": "^0.9.4"
   },
